fixed Layout issues once again.

--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ h5 {
      float: right;
      clear: right;
      padding: 5px;
-     margin-top: -10px;
+     margin: -15px;
      width: 150px;
      border-radius: 10px 0;
 }
@@ -69,7 +69,7 @@ p {
      font-weight: 400;
      font-size: 14px;
      word-spacing: 2px;
-     padding: 5px;
+     padding: 15px;
 }
 
 hr {
